Made changes to the About page text

--- a/index.html
+++ b/index.html
@@ -234,7 +234,21 @@
             </ul>
             <div class="tab-content" id="aboutTabsContent">
               <div class="tab-pane fade active in" id="about">
-                <h4 class="intro-text">It’s no secret that Portland is going through a period of incredible urban growth, and many feel like the decisions that are being made today will impact our city for decades to come.  It’s also no secret that this issue has many different points of view and not everyone sees the information the same way.  We’ve pulled together datasets on all things Urban Development, current and historic, and put them at your fingertips to explore trends, keep track of current activity, and tell your own story.</h4>
+                <h4 class="intro-text"><div class="intro-text-title">This Project was Built by 100% Volunteers</div>
+                  <br>
+                  Hack Oregon is a community-powered non-profit building civic data projects on different themes to promote engagement, awareness, and quality of life.
+                  <br>
+                  <br>
+                  All Hack Oregon projects are open source, built entirely by volunteers from our local community.  That means that if you live in the Oregon area, or would like to contribute remotely, you can work with us!
+                  <br>
+                  <br>
+                  Although each of our projects require a slightly different blend of talents and resources, our teams are always interdisciplinary and always have roles available for people at all levels of experience. We place our team members by balancing the skills they want to contribute with the skill they want to learn — and by operating outside of normal bureaucratic, client-based, or venture funded restrictions — we're free to move fast and innovate faster.
+                  <br>
+                  <br>
+                  It's not always easy, but we think it's pretty worth it.
+                  <br>
+                  <br>
+                  Find out more at <a href="http://www.hackoregon.org">hackoregon.org</a></h4>
               <a href="http://www.hackoregon.org" target="_blank"><img class="center-block img-responsive hackoregon-logo" src="assets/img/hackoregon_logo.png"></a>
                 <h1>The Team</h1>
 
@@ -382,7 +396,7 @@
                <div id="metadata" class="tab-pane fade">
                 <h1>Want to see our data?</h1>
                 <p>All of our data is open-source and available for further exploration on Github.</p>
-                <p><a href="#"><i class="fa fa-github"></i></a></p>
+                <p><a href="https://github.com/hackoregon" target="_blank"><i class="fa fa-github"></i></a></p>
               </div>
             </div>
           </div>
